<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/homeBackgroundColor"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/mendi_logo" />


        <RadioGroup
            android:id="@+id/breathingExerciseRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="16dp"
            android:orientation="vertical">

            <!-- Cyclic Sighing Radio Button -->
            <RadioButton
                android:id="@+id/radioButtonCyclicSighing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@drawable/radio_button_selectors"
                android:buttonTint="@color/mendiColor"
                android:checked="true"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/cyclic_sighing"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/cyclic_sighing_description" />

            <!-- Sudarshan Kriya Radio Button -->
            <RadioButton
                android:id="@+id/radioButtonSudarshanKriya"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:button="@drawable/radio_button_selectors"
                android:buttonTint="@color/mendiColor"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/sudarshan_kriya"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/sudarshan_kriya_description" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSetCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/set_count"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/set_time"
                android:textAlignment="textEnd"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/lightGreyTextColor" />

        <com.google.android.material.slider.Slider
            android:id="@+id/slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="10dp"
            android:stepSize="1"
            android:value="1"
            app:labelBehavior="gone"
            android:valueFrom="1"
            android:shadowColor="@color/sliderColor"
            android:valueTo="5"
            app:thumbColor="#ffffff"
            app:thumbRadius="15dp"
            app:tickVisible="false"
            app:trackColorActive="@color/mendiColor"
            app:trackColorInactive="@color/sliderColor"
            app:trackHeight="12dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightGreyTextColor" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLetsGo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_background"
            android:paddingHorizontal="50dp"
            android:paddingVertical="15dp"
            android:text="@string/btn_lets_go"
            android:textColor="#ffffff"
            android:textSize="16sp" />

    </LinearLayout>
</layout>